# stm32f3-got-mcve

./: .gdbinit  Cargo.toml  build.rs
src/: data.c  main.c  main.rs
