[package]
name = "stm32f3-got-mcve"
description = "minimal example to show .got linking problem"
version = "0.1.0"
authors = ["Sean Bolton <sean@smbolton.com>"]
build = "build.rs"

[build-dependencies]
gcc = "^0.3"

[dependencies.cortex-m-rt]
version = "^0.2.5"

[dependencies.cortex-m]
version = "^0.2.11"
